--- a/alura-flip LMML2/style.css
+++ b/alura-flip LMML2/style.css
@@ -15,3 +15,20 @@ button {
     color: white;
     font-family: ;
 }
+
+ .passo {
+    display: nome;
+ }
+
+ .passo.ativo {
+    display: block;
+ }
+
+ main {
+    text-align: center;
+    max-width: 90%;
+ }
+
+  img {
+    max-width: 90%;
+  }
