--- a/alura-flip LMML2/style.css
+++ b/alura-flip LMML2/style.css
@@ -1,12 +1,12 @@
 body {
     background-color: 1D4221;
     color: white;
-    font-family: Archivo Black, sans-serif;
-display: flex;
-justify-content: center;
-align-items: center;
-height: 770px;
-margin: 0;
+    font-family:Momo Trust Display, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 770px;
+    margin: 0;
 
 }
 
